[package]
name = "rust_lib_for_arduino_example"
version = "0.1.0"
authors = ["K <kamiyaowl@gmail.com>"]
edition = "2018"

[build-dependencies]
cbindgen = "0.14.2"

[dependencies]

[lib]
path = "src/lib.rs"
name = "rust_lib_for_arduino_example"
crate-type = ["staticlib"]

[profile.dev]
opt-level = 2
panic = "abort"
lto = true
debug = true

[profile.release]
opt-level = 3
panic = "abort"
lto = true
debug = true
